# neural-network

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
data/: data.txt
include/: csv.hpp  dataloader.hpp  dense.hpp  loss.hpp  net.hpp  relu.hpp  rng.hpp  sgd.hpp  tensor.hpp
src/: csv.cpp  dataloader.cpp  dense.cpp  loss.cpp  main.cpp  net.cpp  relu.cpp  rng.cpp  sgd.cpp  tensor.cpp
